@@ -1,0 +1,19 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Fakro ZWP10 Remote -->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+    <!-- Association Groups -->
+    <CommandClass id="133">
+        <Associations num_groups="10">
+            <Group index="1"  max_associations="232" label="Channel 1 Basic"/>
+            <Group index="2"  max_associations="232" label="Channel 1 Multilevel"/>
+            <Group index="3"  max_associations="232" label="Channel 2 Basic"/>
+            <Group index="4"  max_associations="232" label="Channel 2 Multilevel"/>
+            <Group index="5"  max_associations="232" label="Channel 3 Basic"/>
+            <Group index="6"  max_associations="232" label="Channel 3 Multilevel"/>
+            <Group index="7"  max_associations="232" label="Channel 4 Basic"/>
+            <Group index="8"  max_associations="232" label="Channel 4 Multilevel"/>
+            <Group index="9"  max_associations="232" label="Channel 5 Basic"/>
+            <Group index="10" max_associations="232" label="Channel 5 Multilevel"/>
+        </Associations>
+    </CommandClass>
+</Product>
