@@ -171,6 +171,7 @@ Version 1.5
  - Add Domux Wall Plug DX2SK-Z (Nechry)
  - Add Yale Key Free Touchscreen Deadbolt YRD446 (Nechry)
  - Add Yale nexTouch Wireless Touchscreen (Nechry)
+ - Add Fakro ZWRS Roller Shutter FLiRS module
  
 Version 1.4
  - Released 10th Jan, 2016
